refactorizado de navbar, pureba de grid en web.html

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -34,14 +34,7 @@
             <a href="../pages/filmGridFavourite.html">Favourite</a>
           </li>
           <li class="navbar-item">
-            <a>
-              <input
-                id="search"
-                class="search-input"
-                type="search"
-                placeholder="Search"
-              />
-            </a>
+            <input id="search" class="search-input" type="search" placeholder="Search" />
           </li>
           <li class="navbar-item">
             <a href="../pages/pageNotFound.html">
@@ -51,6 +44,7 @@
         </ul>
       </nav>
     </header>
+
     <div class="container-area"></div>
   </body>
 </html>
