--- a/pages/web.html
+++ b/pages/web.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/filmGrid.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
+    <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="stylesheet" href="../css/web.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     <title>Web Pelis</title>
   </head>
