--- a/pages/filmGridFavourite.html
+++ b/pages/filmGridFavourite.html
@@ -36,14 +36,7 @@
             <a href="../pages/filmGridFavourite.html">Favourite</a>
           </li>
           <li class="navbar-item">
-            <a>
-              <input
-                id="search"
-                class="search-input"
-                type="search"
-                placeholder="Search"
-              />
-            </a>
+            <input id="search" class="search-input" type="search" placeholder="Search" />
           </li>
           <li class="navbar-item">
             <a href="../pages/pageNotFound.html">
