avances con grid...

--- a/pages/web.html
+++ b/pages/web.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/filmGrid.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="stylesheet" href="../css/web.css" />
@@ -326,7 +325,7 @@
       </section>
 
       <footer class="footer">
-        <div class="container-footer">
+        <section class="container-footer">
           <p>Got feedback?, This web is open source!.</p>
           <p>
             Exercise for learn Html5 & CSS3 by
@@ -340,7 +339,7 @@
               <i class="i-color">anbreaker</i>
             </a>
           </p>
-        </div>
+        </section>
       </footer>
     </div>
   </body>
