--- a/pages/web.html
+++ b/pages/web.html
@@ -321,6 +321,71 @@
               </div>
             </article>
           </a>
+
+          <a href="#" class="gridfilms">
+            <article>
+              <figure class="gridfilms-image">
+                <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
+              </figure>
+
+              <div class="gridfilms-description">
+                <i class="gridfilms-fav ico-star-empty"></i>
+                <h1 class="comments-title">
+                  Harry Potter and the Philosopher's Stone (2001)
+                </h1>
+                <p class="comments-age">Movie rating: Age +8</p>
+                <h2 class="comments-description">Description:</h2>
+                <q class="comments-synopsis">
+                  Harry Potter has lived under the stairs at his uncle's house. But on his
+                  11th birthday, he learns he's a powerful wizard with a place waiting for
+                  him at the Hogwarts School...
+                </q>
+              </div>
+            </article>
+          </a>
+
+          <a href="#" class="gridfilms">
+            <article>
+              <figure class="gridfilms-image">
+                <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
+              </figure>
+
+              <div class="gridfilms-description">
+                <i class="gridfilms-fav ico-star-full"></i>
+                <h1 class="comments-title">
+                  Star Wars Episode IV A New Hope(1977)
+                </h1>
+                <p class="comments-age">Movie rating: Age +16</p>
+                <h2 class="comments-description">Description:</h2>
+                <p class="comments-synopsis">
+                  Princess Leia is captured and held hostage by the evil Imperial forces
+                  in their effort to take over the galactic Empire...
+                </p>
+              </div>
+            </article>
+          </a>
+
+          <a href="#" class="gridfilms">
+            <article>
+              <figure class="gridfilms-image">
+                <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
+              </figure>
+
+              <div class="gridfilms-description">
+                <i class="gridfilms-fav ico-star-empty"></i>
+                <h1 class="comments-title">
+                  Batman Beyond: Return of the Joker (2000)
+                </h1>
+                <p class="comments-age">Movie rating: Age +8</p>
+                <h2 class="comments-description">Description:</h2>
+                <p class="comments-synopsis">
+                  The Joker is back with a vengeance, and Gotham's newest Dark Knight
+                  needs answers as he stands alone to face Gotham's most infamous Clown
+                  Prince of Crime.
+                </p>
+              </div>
+            </article>
+          </a>
         </div>
       </section>
 
