--- a/pages/pageNotFound.html
+++ b/pages/pageNotFound.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="../img/404.svg" alt="Web No disponible" />
+      <img class="notFound" src="../img/404.svg" alt="Web No disponible" />
       <h1>Error ! 404 Page Not Found 😵</h1>
       <h3>
         Go to index Press <strong class="emphasis"> ➡ </strong>
