--- a/pages/web.html
+++ b/pages/web.html
@@ -58,7 +58,7 @@
         <hr />
 
         <div class="container-gridfilms">
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
@@ -79,7 +79,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
@@ -100,7 +100,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
@@ -122,7 +122,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
@@ -143,7 +143,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
@@ -165,7 +165,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img
@@ -189,7 +189,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/theWolf.jpg" alt="Picture of The Wolf" />
@@ -210,7 +210,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
@@ -232,7 +232,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/eliBook.jpg" alt="Picture of The Book of Eli" />
@@ -253,7 +253,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
@@ -280,7 +280,7 @@
         <h1 class="section-title">Watch next</h1>
         <hr />
         <div class="container-gridfilms">
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
@@ -301,7 +301,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
@@ -322,7 +322,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/harryPotter.jpg" alt="Picture of Harry Potter" />
@@ -344,7 +344,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
@@ -365,7 +365,7 @@
             </article>
           </a>
 
-          <a href="#" class="gridfilms">
+          <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
                 <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
