posiconado titulo de secciones hr continuo

--- a/pages/web.html
+++ b/pages/web.html
@@ -55,7 +55,7 @@
 
       <section class="section-films">
         <h1 class="section-title">Films:</h1>
-        <hr />
+        <hr class="hr-line" />
 
         <div class="container-gridfilms">
           <a href="#" class="gridfilm">
@@ -273,12 +273,55 @@
               </div>
             </article>
           </a>
+
+          <a href="#" class="gridfilm">
+            <article>
+              <figure class="gridfilms-image">
+                <img src="../img/films/inside.jpg" alt="Picture of Rocky" />
+              </figure>
+              <div class="gridfilms-description">
+                <i class="gridfilms-fav ico-star-empty"></i>
+                <h1 class="comments-title">
+                  Inside Out (2015)
+                </h1>
+                <p class="comments-age">Movie rating: Age +1</p>
+                <h2 class="comments-description">Description:</h2>
+                <q class="comments-synopsis">
+                  Riley, uprooted from her Midwest life, when her father starts a new job
+                  in San Francisco. Riley is guided by her emotions - Joy, Fear, Anger,
+                  Disgust and Sadness...
+                </q>
+              </div>
+            </article>
+          </a>
+
+          <a href="#" class="gridfilm">
+            <article>
+              <figure class="gridfilms-image">
+                <img src="../img/films/madMaxNew.jpg" alt="Picture of Rocky" />
+              </figure>
+              <div class="gridfilms-description">
+                <i class="gridfilms-fav ico-star-full"></i>
+                <h1 class="comments-title">
+                  Mad Max: Fury Road (2015)
+                </h1>
+                <p class="comments-age">Movie rating: Age +16</p>
+                <h2 class="comments-description">Description:</h2>
+                <q class="comments-synopsis">
+                  An apocalyptic story set in the furthest reaches of our planet, in a
+                  stark desert landscape where humanity is broken, and most everyone is
+                  crazed fighting for the necessities of life...
+                </q>
+              </div>
+            </article>
+          </a>
         </div>
       </section>
 
       <section class="section-watchNext">
         <h1 class="section-title">Watch next</h1>
-        <hr />
+        <hr class="hr-line" />
+
         <div class="container-gridfilms">
           <a href="#" class="gridfilm">
             <article>
@@ -368,21 +411,41 @@
           <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
+                <img src="../img/films/inside.jpg" alt="Picture of Rocky" />
               </figure>
-
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-empty"></i>
                 <h1 class="comments-title">
-                  Batman Beyond: Return of the Joker (2000)
+                  Inside Out (2015)
                 </h1>
-                <p class="comments-age">Movie rating: Age +8</p>
+                <p class="comments-age">Movie rating: Age +1</p>
                 <h2 class="comments-description">Description:</h2>
-                <p class="comments-synopsis">
-                  The Joker is back with a vengeance, and Gotham's newest Dark Knight
-                  needs answers as he stands alone to face Gotham's most infamous Clown
-                  Prince of Crime.
-                </p>
+                <q class="comments-synopsis">
+                  Riley, uprooted from her Midwest life, when her father starts a new job
+                  in San Francisco. Riley is guided by her emotions - Joy, Fear, Anger,
+                  Disgust and Sadness...
+                </q>
+              </div>
+            </article>
+          </a>
+
+          <a href="#" class="gridfilm">
+            <article>
+              <figure class="gridfilms-image">
+                <img src="../img/films/madMaxNew.jpg" alt="Picture of Rocky" />
+              </figure>
+              <div class="gridfilms-description">
+                <i class="gridfilms-fav ico-star-full"></i>
+                <h1 class="comments-title">
+                  Mad Max: Fury Road (2015)
+                </h1>
+                <p class="comments-age">Movie rating: Age +16</p>
+                <h2 class="comments-description">Description:</h2>
+                <q class="comments-synopsis">
+                  An apocalyptic story set in the furthest reaches of our planet, in a
+                  stark desert landscape where humanity is broken, and most everyone is
+                  crazed fighting for the necessities of life...
+                </q>
               </div>
             </article>
           </a>
