--- a/pages/web.html
+++ b/pages/web.html
@@ -24,7 +24,7 @@
           <a href="#"><h1>rootdevs</h1></a>
           <span class="logo">
             <a href="/">
-              <!-- <img class="logo-img" src="../img/logo.svg" alt="Logo" /> -->
+              <img class="logo-img" src="../img/logo.svg" alt="Logo" />
             </a>
           </span>
 
