actores spanmenizados, tratando de ser semanticamente correcto

--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -70,16 +70,32 @@
           Eos, cum earum odit dignissimos accusamus harum quidem! Dolores, magni.
         </p>
         <h2>Actors:</h2>
-        <div class="articleGrid-container">
-          <a href="#">
-            <img class="articleGrid-img" src="../img/actors/man.svg" alt="Name actor" />
-          </a>
-          <a href="#">
-            <img class="articleGrid-img" src="../img/actors/woman.svg" alt="Name actor" />
-          </a>
-          <a href="#">
-            <img class="articleGrid-img" src="../img/actors/man.svg" alt="Name actor" />
-          </a>
+        <div class="article-container">
+          <span>
+            <a href="#">
+              <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
+            </a>
+          </span>
+          <span>
+            <a href="#">
+              <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
+            </a>
+          </span>
+          <span>
+            <a href="#">
+              <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
+            </a>
+          </span>
+          <span>
+            <a href="#">
+              <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
+            </a>
+          </span>
+          <span>
+            <a href="#">
+              <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
+            </a>
+          </span>
         </div>
       </article>
 
