en la parte felx de los actores

--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -83,6 +83,11 @@
           </span>
           <span>
             <a href="#">
+              <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
+            </a>
+          </span>
+          <span>
+            <a href="#">
               <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
             </a>
           </span>
