--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -54,6 +54,9 @@
       </header>
 
       <section class="section-video">
+        <h1 class="section-title">Films:</h1>
+        <hr class="hr-line" />
+
         <div class="container-video">
           <video class="video" src="../video/inside.mp4" controls></video>
         </div>
@@ -105,9 +108,18 @@
       </article>
 
       <aside class="aside-similar">
-        <h1>Similar movies</h1>
+        <h1 class="aside-title">Similar movies:</h1>
         <a href="#">
           <img class="aside-img" src="../img/films/eliBook.jpg" alt="" />
+        </a>
+        <a href="#">
+          <img class="aside-img" src="../img/films/pulpFiction.jpg" alt="" />
+        </a>
+        <a href="#">
+          <img class="aside-img" src="../img/films/madMaxNew.jpg" alt="" />
+        </a>
+        <a href="#">
+          <img class="aside-img" src="../img/films/reservoirDogs.jpg" alt="" />
         </a>
       </aside>
 
@@ -115,7 +127,7 @@
         <section class="container-footer">
           <p>Got feedback?, This web is open source!.</p>
           <p>
-            Exercise for learn Html5 & CSS3 by
+            Exercise for learn HTML5 & CSS3 by
             <a href="https://keepcoding.io/">
               <strong>Keepcoding!</strong>
             </a>
