cambiado areas para reformar el grid

--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -60,67 +60,68 @@
         <div class="container-video">
           <video class="video" src="../video/inside.mp4" controls></video>
         </div>
-      </section>
 
-      <article class="section-description">
-        <h1>Title</h1>
-        <p>Release Date: 2015</p>
-        <p>Score: 9/10</p>
-        <p>Sinopsis:</p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ratione!
-          Praesentium voluptates alias odit architecto soluta sint sed, asperiores non!
-          Eos, cum earum odit dignissimos accusamus harum quidem! Dolores, magni.
-        </p>
-        <h2>Actors:</h2>
-        <div class="article-container">
-          <span>
-            <a href="#">
-              <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
-            </a>
-          </span>
-          <span>
-            <a href="#">
-              <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
-            </a>
-          </span>
-          <span>
-            <a href="#">
-              <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
-            </a>
-          </span>
-          <span>
-            <a href="#">
-              <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
-            </a>
-          </span>
-          <span>
-            <a href="#">
-              <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
-            </a>
-          </span>
-          <span>
-            <a href="#">
-              <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
-            </a>
-          </span>
-        </div>
-      </article>
+        <article class="article-description">
+          <h1 class="article-title">Name of film:</h1>
+          <p><strong class="article-strong">Release Date:</strong> 2015</p>
+          <p><strong class="article-strong">Score:</strong> 9/10</p>
+          <h2 class="article-strong">Sinopsis:</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ratione!
+            Praesentium voluptates alias odit architecto soluta sint sed, asperiores non!
+            Eos, cum earum odit dignissimos accusamus harum quidem! Dolores, magni.
+          </p>
+          <h2 class="article-subTitle">Actors:</h2>
+          <div class="article-container">
+            <span>
+              <a href="#">
+                <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
+              </a>
+            </span>
+            <span>
+              <a href="#">
+                <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
+              </a>
+            </span>
+            <span>
+              <a href="#">
+                <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
+              </a>
+            </span>
+            <span>
+              <a href="#">
+                <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
+              </a>
+            </span>
+            <span>
+              <a href="#">
+                <img class="article-img" src="../img/actors/woman.svg" alt="Name actor" />
+              </a>
+            </span>
+            <span>
+              <a href="#">
+                <img class="article-img" src="../img/actors/man.svg" alt="Name actor" />
+              </a>
+            </span>
+          </div>
+        </article>
+      </section>
 
       <aside class="aside-similar">
         <h1 class="aside-title">Similar movies:</h1>
-        <a href="#">
-          <img class="aside-img" src="../img/films/eliBook.jpg" alt="" />
-        </a>
-        <a href="#">
-          <img class="aside-img" src="../img/films/pulpFiction.jpg" alt="" />
-        </a>
-        <a href="#">
-          <img class="aside-img" src="../img/films/madMaxNew.jpg" alt="" />
-        </a>
-        <a href="#">
-          <img class="aside-img" src="../img/films/reservoirDogs.jpg" alt="" />
-        </a>
+        <hr class="aside-hr-line" />
+
+        <div class="aside-container">
+          <a href="#">
+            <img class="aside-img" src="../img/films/eliBook.jpg" alt="" />
+          </a>
+          <a href="#">
+            <img class="aside-img" src="../img/films/pulpFiction.jpg" alt="" />
+          </a>
+          <a href="#">
+            <img class="aside-img" src="../img/films/reservoirDogs.jpg" alt="" />
+          </a>
+        </div>
       </aside>
 
       <footer class="footer">
