--- a/pages/web.html
+++ b/pages/web.html
@@ -319,7 +319,7 @@
       </section>
 
       <section class="section-watchNext">
-        <h1 class="section-title">Watch next</h1>
+        <h1 class="section-title">Watch next:</h1>
         <hr class="hr-line" />
 
         <div class="container-gridfilms">
