Algunos ajustes de css (titulos y demas...)

--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -62,7 +62,7 @@
         </div>
 
         <article class="article-description">
-          <h1 class="article-title">Name of film:</h1>
+          <h1 class="article-title">Name film</h1>
           <p><strong class="article-strong">Release Date:</strong> 2015</p>
           <p><strong class="article-strong">Score:</strong> 9/10</p>
           <h2 class="article-strong">Sinopsis:</h2>
