--- a/pages/web.html
+++ b/pages/web.html
@@ -23,7 +23,7 @@
           </label>
           <a href="#"><h1>rootdevs</h1></a>
           <span class="logo">
-            <a href="/">
+            <a href="../pages/login.html">
               <img class="logo-img" src="../img/logo.svg" alt="Logo" />
             </a>
           </span>
@@ -31,7 +31,7 @@
           <ul class="navbar-list">
             <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
             <li class="navbar-item">
-              <a href="../pages/filmGrid.html">Films</a>
+              <a href="../pages/web.html">Films</a>
             </li>
             <li class="navbar-item">
               <a href="../pages/filmGridFavourite.html">Favourite</a>
@@ -114,9 +114,9 @@
                 <p class="comments-age">Movie rating: Age +8</p>
                 <h2 class="comments-description">Description:</h2>
                 <q class="comments-synopsis">
-                  Harry Potter has lived under the stairs at his uncle's house. But on his
-                  11th birthday, he learns he's a powerful wizard with a place waiting for
-                  him at the Hogwarts School...
+                  Harry Potter has lived under the stairs. But on his 11th birthday, he
+                  learns he's a powerful wizard with a place waiting for him at the
+                  Hogwarts School...
                 </q>
               </div>
             </article>
