--- a/pages/footer.html
+++ b/pages/footer.html
@@ -50,13 +50,17 @@
         <p>Got feedback?, This web is open source!.</p>
         <p>
           Exercise for learn Html5 & CSS3 by
-          <a href="https://keepcoding.io/">
+          <a href="https://keepcoding.io/" target="_blank" rel="noreferrer noopener">
             <strong>Keepcoding!</strong>
           </a>
         </p>
         <p>
           Made with <i class="i-color-l">&lt;/code&gt; & ❤️</i> by
-          <a href="https://github.com/anbreaker">
+          <a
+            href="https://github.com/anbreaker"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
             <i class="i-color">anbreaker</i>
           </a>
         </p>
