--- a/pages/login.html
+++ b/pages/login.html
@@ -19,7 +19,7 @@
           <div class="login-input-zone">
             <input class="login-input" type="email" placeholder="yourEmail@address.com" />
             <input class="login-input" type="password" placeholder="Your Password" />
-            <a href="../pages/navbar.html"
+            <a href="../pages/index.html"
               ><input class="login-input button" type="button" value="Log In"
             /></a>
           </div>
