refactorizado de footer

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -9,42 +9,9 @@
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-    <title>Navbar</title>
+    <title>Footer</title>
   </head>
   <body>
-    <header class="header">
-      <nav id="navbar" class="navbar">
-        <span class="logo">
-          <a href="/">
-            <img class="logo-img" src="../img/logo.svg" alt="Logo" />
-          </a>
-        </span>
-
-        <ul class="navbar-list">
-          <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
-          <li class="navbar-item">
-            <a href="../pages/filmGrid.html">Films</a>
-          </li>
-          <li class="navbar-item">
-            <a href="../pages/filmGridFavourite.html">Favourite</a>
-          </li>
-          <li class="navbar-item">
-            <input class="search-input" type="text" name="" placeholder="Search" />
-          </li>
-          <li class="navbar-item">
-            <a href="../pages/pageNotFound.html">
-              <button class="link-button">Sign Out</button>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
-    <h1>Video</h1>
-    <div class="container-video">
-      <video class="video" src="../video/inside.mp4" controls></video>
-    </div>
-
     <footer class="footer">
       <div class="container-footer">
         <p>Got feedback?, This web is open source!.</p>
