--- a/pages/movieDescription.html
+++ b/pages/movieDescription.html
@@ -112,34 +112,38 @@
         <hr class="aside-hr-line" />
 
         <div class="aside-container">
-          <a href="#">
-            <img class="aside-img" src="../img/films/eliBook.jpg" alt="" />
+          <a href="#" class="aside-film">
+            <img class="aside-img" src="../img/films/eliBook.jpg" alt="Name Film" />
           </a>
-          <a href="#">
-            <img class="aside-img" src="../img/films/pulpFiction.jpg" alt="" />
+          <a href="#" class="aside-film">
+            <img class="aside-img" src="../img/films/pulpFiction.jpg" alt="Name Film" />
           </a>
-          <a href="#">
-            <img class="aside-img" src="../img/films/reservoirDogs.jpg" alt="" />
+          <a href="#" class="aside-film">
+            <img class="aside-img" src="../img/films/reservoirDogs.jpg" alt="Name Film" />
           </a>
         </div>
       </aside>
 
       <footer class="footer">
-        <section class="container-footer">
+        <div class="container-footer">
           <p>Got feedback?, This web is open source!.</p>
           <p>
-            Exercise for learn HTML5 & CSS3 by
-            <a href="https://keepcoding.io/">
+            Exercise for learn Html5 & CSS3 by
+            <a href="https://keepcoding.io/" target="_blank" rel="noreferrer noopener">
               <strong>Keepcoding!</strong>
             </a>
           </p>
           <p>
             Made with <i class="i-color-l">&lt;/code&gt; & ❤️</i> by
-            <a href="https://github.com/anbreaker">
+            <a
+              href="https://github.com/anbreaker"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
               <i class="i-color">anbreaker</i>
             </a>
           </p>
-        </section>
+        </div>
       </footer>
     </div>
   </body>
