refactorizado de paginas, creando enlaces correctos iniciado...

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
           </label>
           <a href="#"><h1>rootdevs</h1></a>
           <span class="logo">
-            <a href="../pages/login.html">
+            <a href="../pages/index.html">
               <img class="logo-img" src="../img/logo.svg" alt="Logo" />
             </a>
           </span>
@@ -31,7 +31,7 @@
           <ul class="navbar-list">
             <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
             <li class="navbar-item">
-              <a href="../pages/web.html">Films</a>
+              <a href="../pages/index.html">Films</a>
             </li>
             <li class="navbar-item">
               <a href="../pages/filmGridFavourite.html">Favourite</a>
@@ -425,7 +425,7 @@
           <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/inside.jpg" alt="Picture of Rocky" />
+                <img src="../img/films/inside.jpg" alt="Picture of Inside Out" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-empty"></i>
@@ -447,7 +447,7 @@
           <a href="#" class="gridfilm">
             <article>
               <figure class="gridfilms-image">
-                <img src="../img/films/madMaxNew.jpg" alt="Picture of Rocky" />
+                <img src="../img/films/madMaxNew.jpg" alt="Picture of Mad Max" />
               </figure>
               <div class="gridfilms-description">
                 <i class="gridfilms-fav ico-star-full"></i>
