--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -20,7 +20,7 @@
         </label>
         <a href="#"><h1>rootdevs</h1></a>
         <span class="logo">
-          <a href="/">
+          <a href="../pages/index.html">
             <img class="logo-img" src="../img/logo.svg" alt="Logo" />
           </a>
         </span>
@@ -28,7 +28,7 @@
         <ul class="navbar-list">
           <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
           <li class="navbar-item">
-            <a href="../pages/filmGrid.html">Films</a>
+            <a href="../pages/index.html">Films</a>
           </li>
           <li class="navbar-item">
             <a href="../pages/filmGridFavourite.html">Favourite</a>
